--- a/Lab_Assignment_03.ipynb
+++ b/Lab_Assignment_03.ipynb
@@ -109,22 +109,10 @@
         "from google.colab import drive"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "OQeovGUsnEX8",
-        "outputId": "6f2bb678-5e5e-42bf-f84f-77a5e581535b"
+        "id": "OQeovGUsnEX8"
       },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
-      ]
+      "execution_count": 8,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -182,18 +170,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FsTQA99cnLKl",
-        "outputId": "ddda0b78-f8d7-435b-f462-036eb4746d87"
+        "outputId": "7f8418a6-ef4f-42f0-ede5-b5d644ff4f42"
       },
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy: 0.9523809523809523\n",
-            "Class 1.0: 17 correct predictions\n",
-            "Class 2.0: 14 correct predictions\n",
-            "Class 3.0: 9 correct predictions\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
+            "Accuracy: 0.8809523809523809\n",
+            "Class 1.0: 14 correct predictions\n",
+            "Class 2.0: 13 correct predictions\n",
+            "Class 3.0: 10 correct predictions\n"
           ]
         }
       ]
